# moveit_benchmark_suite

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.rst  changelog.md  package.xml
benchmark_suite/: CMakeLists.txt  package.xml
benchmark_suite/benchmarks/: collision_check.launch  motion_planning_mgi.launch  motion_planning_pp.launch
benchmark_suite/config/: bbt_mesh_scene.urdf.xacro  bbt_primitive_scene.urdf.xacro  collision_check.yaml  empty_scene.urdf.xacro  motion_planning.yaml  motion_planning_config.yaml  motion_planning_mgi.yaml  motion_planning_pp.yaml  mtc_pickplace.yaml  panda_benchmark.yaml  panda_request1.yaml  plots.yaml
benchmark_suite/config/rviz/: moveit.rviz
benchmark_suite/examples/: aggregate.launch  collision_check.launch  collision_checks.launch  gnuplot_dataset.launch  motion_planning.launch  motion_planning.yaml  mtc_pickplace.launch  plot_dataset.launch
benchmark_suite/include/moveit_benchmark_suite/: aggregate.h  aggregation.h  benchmark.h  builder.h  constants.h  dataset.h  geometry.h  io.h  macros.h  planner.h  planning.h  profiler.h  query.h  robot.h  scene.h  serialization.h  tf.h  token.h  trajectory.h  visualization.h  yaml.h
benchmark_suite/launch/: aggregate.launch  generate_plots.launch  motion_planning.launch  move_group_interface_benchmark.launch  moveit_rviz.launch  planning_backend.launch  planning_pipeline_benchmark.launch
benchmark_suite/scripts/: benchmark_aggregate_plot.sh  move_group_interface_benchmark.cpp  planning_backend.cpp  planning_pipeline_benchmark.cpp  run_benchmarks.sh  test.sh
benchmark_suite/src/: aggregate.cpp  aggregate_dataset.cpp  aggregation.cpp  benchmark.cpp  builder.cpp  dataset.cpp  generate_plots.cpp  geometry.cpp  gnuplot_dataset.cpp  io.cpp  planning.cpp  plot_dataset.cpp  profiler.cpp  robot.cpp  scene.cpp  serialization.cpp  tf.cpp  token.cpp  trajectory.cpp  visualization.cpp  yaml.cpp
benchmark_suite/src/backend/: collision_checks.cpp  collision_checks_benchmark.cpp  motion_planning.cpp  motion_planning_benchmark.cpp  motion_planning_config.cpp  mtc_pickplace.cpp  mtc_runtask.cpp
benchmark_suite/src/benchmarks/: collision_check.cpp  collision_check_benchmark.cpp  collision_check_profiler.cpp  collision_checks.cpp  collision_checks_benchmark.cpp  motion_planning.cpp  motion_planning_benchmark.cpp  motion_planning_config.cpp  motion_planning_mgi_benchmark.cpp  motion_planning_pp_benchmark.cpp  motion_planning_profiler.cpp
core/: CMakeLists.txt  package.xml
core/src/: benchmark.cpp  builder.cpp  colormap.cpp  dataset.cpp  dataset_filter.cpp  geometry.cpp  handler.cpp  io.cpp  log.cpp  planning.cpp  profiler.cpp  random.cpp  resource_builder.cpp  robot.cpp  scene.cpp  serialization.cpp  statistics.cpp  token.cpp  trajectory.cpp  utils.cpp  visualization.cpp
model_set/: CMakeLists.txt  package.xml
moveit/: CMakeLists.txt  package.xml
moveit/aggregate/: collision_checks.yaml  motion_planning.yaml
moveit/benchmarks/: collision_check.launch  collision_check.launch.inc  collision_check_mesh_quality.launch  collision_check_primitive_vs_mesh.launch  motion_planning_pp.launch  motion_planning_pp.launch.inc  motion_planning_pp_mesh_quality.launch
moveit/config/: collision_check.yaml  collision_check_mesh_quality.yaml  collision_check_primitive_vs_mesh.yaml  motion_planning_mgi.yaml  motion_planning_pp.yaml  motion_planning_pp_mesh_quality.yaml
moveit/launch/: generate_plots.launch  plot_dataset.launch
moveit/plots/: collision_checks.yaml  collision_checks_mesh_quality.yaml  motion_planning_pp_mesh_quality.yaml
moveit/scripts/: regression.sh  run_benchmarks.sh
moveit/src/: aggregate.cpp  benchmark_callback_loader.cpp  collision_check_benchmark.cpp  colormap.cpp  dataset.cpp  log.cpp  motion_planning_mgi_benchmark.cpp  motion_planning_pp_benchmark.cpp  plot_dataset.cpp  random.cpp  robot.cpp  serialization.cpp  token.cpp  trajectory.cpp
moveit/src/io/: gnuplot.cpp
moveit_benchmark_suite/: CMakeLists.txt  README.md  package.xml
moveit_benchmark_suite/launch/: demo-db.launch  display-motion.launch
moveit_benchmark_suite/src/: load_scene.cpp  load_scene_bbt.cpp  run_task.cpp
msgs/: CMakeLists.txt  package.xml
msgs/msg/: MoveGroupInterfaceRequest.msg  PlanningPipelineRequest.msg
mtc/: CMakeLists.txt  package.xml
mtc/benchmarks/: mtc_pickplace.launch  pickplace.launch
mtc/config/: mtc_pickplace.yaml  pickplace.yaml
mtc/launch/: moveit_rviz.launch
mtc/src/: mtc_pickplace.cpp  mtc_pickplace.h  mtc_runtask.cpp  pickplace.cpp  pickplace_benchmark.cpp  pickplace_builder.cpp  pickplace_profiler.cpp  pickplace_task.cpp  run_pickplace.cpp
output/: CMakeLists.txt  package.xml
output/config/: aggregate.yaml
output/launch/: aggregate.launch  generate_plots.launch  plot_dataset.launch
output/src/: aggregate.cpp  aggregate_dataset.cpp  dataset_log.cpp  generate_plots.cpp  gnuplot.cpp  htmlplot.cpp  plot_dataset.cpp  rviz_visualization.cpp
plot/: CMakeLists.txt  package.xml
plot/src/: aggregate.cpp  aggregate_dataset.cpp  generate_plots.cpp  gnuplot.cpp  htmlplot.cpp  plot_dataset.cpp
resources/: CMakeLists.txt  README.md  package.xml
resources/objects/: README.md  apcshelf.stl  apcshelf.yaml  bowl.yaml  bowl_16k.stl  boxlid.yaml  boxlid_19k.stl  clearbox.yaml  drill.yaml  drill_16k.stl  geometry.xacro  metadata.xacro  mug.yaml  mug_16k.stl  plate.yaml  plate_16k.stl  soupcan.yaml  soupcan_16k.stl  unit_box_blender.stl  unit_box_blender.yaml  unit_box_solidworks.stl  unit_box_solidworks.yaml  unit_box_solidworks_rotated.stl  woodblock.yaml  woodblock_16k.stl
tools/: CMakeLists.txt  package.xml
tools/config/: aggregate.yaml  generate_plots.yaml  gnuplot.yaml  ik_generator.yaml  tf_generator.yaml
tools/launch/: aggregate.launch  convert_dataset.launch  generate_plots.launch  ik_generator.launch  plot_dataset.launch  tf_generator.launch
tools/src/: aggregate.cpp  aggregate_dataset.cpp  convert_dataset.cpp  dataset_log.cpp  generate_plots.cpp  gnuplot.cpp  htmlplot.cpp  ik_generator.cpp  plot_dataset.cpp  rviz_visualization.cpp  tf_generator.cpp
(+371 files in other folders)
