<package format="2">
	<name>moveit_benchmark_suite</name>
	<version>0.0.0</version>
	<description>Benchmark backend for testing MoveIt</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>boost</depend>
	<depend>tf2_ros</depend>
	<depend>yaml-cpp</depend>
	<depend>geometric_shapes</depend>
	<depend>geometry_msgs</depend>
	<depend>eigen_conversions</depend>
	<depend>roscpp</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>visualization_msgs</depend>
	<depend>moveit_visual_tools</depend>
	<depend>scene_parser</depend>
	<depend>moveit_benchmark_suite_resources</depend>
	<depend>rosparam_shortcuts</depend>

	<export>
		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
	</export>
</package>
