<package format="2">
	<name>moveit_benchmark_suite_core</name>
	<version>0.0.0</version>
	<description>Core libraries used by MoveIt Benchmark Suite</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>boost</depend>
	<depend>eigen_conversions</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>moveit_serialization</depend>
	<depend>roscpp</depend>
	<depend>tf2_ros</depend>
	<depend>urdf_to_scene</depend>

	<export>
		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
	</export>
</package>
