<package format="2">
	<name>moveit_benchmark_suite</name>
	<version>0.0.0</version>
	<description>Benchmark backend for testing MoveIt</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>boost</depend>
	<depend>eigen_conversions</depend>
	<depend>moveit_benchmark_suite_resources</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>moveit_serialization</depend>
	<depend>moveit_visual_tools</depend>
	<depend>roscpp</depend>
	<depend>rosparam_shortcuts</depend>
	<depend>tf2_ros</depend>
	<depend>urdf_to_scene</depend>
	<depend>visualization_msgs</depend>

	<export>
		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
	</export>
</package>
