<package format="2">
	<name>moveit_benchmark_suite</name>
	<version>0.0.0</version>
	<description>Benchmark backend for testing MoveIt</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>boost</depend>
	<depend>moveit_benchmark_suite_core</depend>
	<depend>moveit_benchmark_suite_output</depend>

	<export>
		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
	</export>
</package>
