<package format="2">
	<name>moveit_benchmark_suite_msgs</name>
	<version>0.0.0</version>
	<description>Messages for MoveIt Benchmark Suite</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>message_generation</depend>
	<depend>moveit_msgs</depend>
  	<depend>sensor_msgs</depend>
  	<depend>geometry_msgs</depend>
  	<depend>trajectory_msgs</depend>
	<depend>visualization_msgs</depend>

	<exec_depend>message_runtime</exec_depend>
</package>
