<package format="2">
	<name>moveit_benchmark_suite_mtc</name>
	<version>0.0.0</version>
	<description>Benchmark backend for testing MoveIt Task Constructor</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>yaml-cpp</depend>

	<depend>eigen_conversions</depend>
	<depend>roscpp</depend>
	<depend>moveit_core</depend>
	<depend>moveit_ros_planning</depend>
	<depend>moveit_ros_planning_interface</depend>
	<depend>visualization_msgs</depend>
	<depend>moveit_visual_tools</depend>
	<depend>scene_parser</depend>
	<depend>moveit_benchmark_suite</depend>
	<depend>moveit_benchmark_suite_resources</depend>
	<depend>moveit_task_constructor_core</depend>
	<depend>moveit_task_constructor_msgs</depend>
	<depend>rosparam_shortcuts</depend>

	<export>
		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
	</export>
</package>
