<package format="2">
	<name>moveit_benchmark_suite_mtc</name>
	<version>0.0.0</version>
	<description>Benchmark backend for testing MoveIt Task Constructor</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>moveit_benchmark_suite_core</depend>
	<depend>moveit_benchmark_suite_tools</depend>
	<depend>moveit_task_constructor_core</depend>
	<depend>moveit_task_constructor_msgs</depend>
	<depend>rosparam_shortcuts</depend>

	<depend>moveit_benchmark_suite</depend>
	<export>
		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
	</export>
</package>
