<package format="2">
	<name>moveit_benchmark_suite_plot</name>
	<version>0.0.0</version>
	<description>Plots datasets</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>moveit_benchmark_suite_core</depend>

	<export>
		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
	</export>
</package>
