<package format="2">
	<name>moveit_benchmark_suite_tools</name>
	<version>0.1.0</version>
	<description>Store, plot and visualize components of the MoveIt Benchmark Suite</description>

	<license>BSD</license>
	<maintainer email="captain.yoshisaur@gmail.com">Captain Yoshi</maintainer>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>moveit_benchmark_suite_core</depend>
	<depend>rviz</depend>

	<export>
		<moveit_benchmark_suite benchmarks="${prefix}/benchmarks"/>
	</export>
</package>
